--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}    
 
 {% block content %}
-    <h1>Main page</h1>
-    <p>Hello</p>
+<div class="welcome">
+    <h1>welcome to my blog</h1>
+    <p>have fun!</p>
+    <a href="{% url 'entries' %}"><button class="check">check out my posts</button></a>
+</div>
+    
 {% endblock %}
