--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}    
 
 {% block content %}
+<div class="about">
     <h1>About</h1>
     <p>About us</p>
+</div>
+    
 {% endblock %}
