--- a/assets/style.scss
+++ b/assets/style.scss
@@ -14,12 +14,13 @@ body {
 
 .navbar {
     
-    padding: 1rem;
+    padding: 1rem 7rem;
     height: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #2F4858;
+    // background-color: #2F4858;
+    background-color: rgb(27, 27, 27);
     color: #FBF9FF;
     a {
         margin-left: 20px;
@@ -72,4 +73,30 @@ body {
     a {
         text-decoration: none;
     }   
+}
+
+.about {
+    border-radius: 5px;
+    font-family: 'Inter';
+    width: 920px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 80px auto;
+    min-height: 70vh;
+    .aboutme {
+        color: hsl(240, 38%, 20%);
+        font-size: 20px;
+        text-align: justify;
+        width: 450px;
+        .author {
+            margin-top: 15px;
+            font-weight: 700;
+        }
+    }
+    .photo {
+        img {
+            width: 350px;
+        }
+    }
 }
