--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,22 @@
 {% extends 'base.html' %}    
-
+{% load static %}
 {% block content %}
 <div class="about">
-    <h1>About</h1>
-    <p>About us</p>
+    <div class="aboutme">
+        <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown printer took a galley of type and scrambled it to make a type 
+            specimen book.
+        </p>
+        <p class="author">
+            John Doe - blog author
+        </p>
+    </div>
+    <div class="photo">
+        <img src="{% static 'img/author.jpg' %}" alt="me"/>
+
+    </div>
 </div>
     
 {% endblock %}
