--- a/assets/style.css
+++ b/assets/style.css
@@ -11,7 +11,7 @@ body {
 
 .navbar {
   padding: 1rem 7rem;
-  height: 50px;
+  height: 80px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -29,6 +29,8 @@ body {
   border-bottom: 1.2px solid white;
   transition-delay: 0.1s;
   transition-timing-function: linear;
+  color: white;
+  text-decoration: none;
 }
 
 .welcome {
@@ -90,4 +92,42 @@ body {
 }
 .about .photo img {
   width: 350px;
+}
+
+.entries {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 auto;
+  width: 1020px;
+}
+.entries h1 {
+  color: #4a5055;
+  text-align: center;
+}
+
+.entry {
+  text-align: justify;
+  margin: 20px 0;
+}
+.entry .title {
+  color: #4a5055;
+}
+.entry .date {
+  margin-bottom: 0px;
+  text-align: right;
+}
+
+.num-of-pages {
+  text-align: center;
+}
+
+.return a {
+  text-decoration: none;
+  color: #4a5055;
+  cursor: pointer;
+}
+.return a:hover {
+  color: #4a5055;
 }/*# sourceMappingURL=style.css.map */
