--- a/templates/about.html
+++ b/templates/about.html
@@ -4,10 +4,11 @@
 <div class="about">
     <div class="aboutme">
         <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-            when an unknown printer took a galley of type and scrambled it to make a type 
-            specimen book.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent in orci 
+            at leo sollicitudin consectetur sed eu quam. Mauris sed massa nisl. 
+            Integer est elit, ultricies et magna et, lobortis luctus nisi. Aenean
+             egestas imperdiet accumsan. Cras elementum magna nec dolor maximus, 
+             vitae tempus arcu lacinia.
         </p>
         <p class="author">
             John Doe - blog author
