--- a/assets/style.scss
+++ b/assets/style.scss
@@ -13,13 +13,11 @@ body {
 }
 
 .navbar {
-    
     padding: 1rem 7rem;
-    height: 50px;
+    height: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    // background-color: #2F4858;
     background-color: rgb(27, 27, 27);
     color: #FBF9FF;
     a {
@@ -32,9 +30,10 @@ body {
             border-bottom: 1.2px solid white;
             transition-delay: 0.1s;
             transition-timing-function: linear;
+            color: white;
+            text-decoration: none;
         }
     }
-
 }
 
 .welcome {
@@ -97,6 +96,47 @@ body {
     .photo {
         img {
             width: 350px;
+        }
+    }
+}
+
+.entries {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+    width: 1020px;
+    h1 {
+        color: #4a5055;
+        text-align: center;
+    }
+
+}
+.entry {
+    text-align: justify;
+    margin: 20px 0;
+    // border-bottom: 2px solid rgb(114, 30, 30);
+    .title {
+        color: #4a5055;
+        
+    }
+    .date {
+        margin-bottom: 0px;
+        text-align: right;
+    }
+}
+.num-of-pages {
+    text-align: center;
+}
+
+.return {
+    a {
+        text-decoration: none;
+        color: #4a5055;
+        cursor: pointer;
+        &:hover {
+            color: #4a5055;
         }
     }
 }
