--- a/entries/templates/entries/entries_list.html
+++ b/entries/templates/entries/entries_list.html
@@ -1,26 +1,31 @@
 {% extends 'base.html' %}    
 
 {% block content %}
-    <div>
-        <h1>List of entries</h1>
+    <div class="entries">
+        <h1 class="list">List of entries</h1>
         {% for entry in entries %}
-            <div>
-                <h2><a href="#">{{ entry.title }}</a></h2>
+            <div class="entry">
+                
+                <h2 class="title">{{ entry.title }}</h2>
                 <p>{{entry.reduction}}</p>
-                <p style="text-align: right">{{entry.date|date:"H:i, d.m.Y"}}</p>
-                <a href="entry/{{ entry.id }}"><button>READ MORE</button></a>
+                <p class="date">{{entry.date|date:"H:i, d.m.Y"}}</p>
+                <a href="entry/{{ entry.id }}"><button class="btn btn-outline-secondary">READ MORE</button></a>
                 
             </div>
         {% endfor %}
         
-        <p>Page {{ entries.number }} of {{ entries.paginator.num_pages }}.</p>
-        {% if entries.has_previous %}
-        <a href="?page={{entries.previous_page_number}}">Previous</a>
-        {% endif %}
-        
-        {% if entries.has_next %}
-        <a href="?page={{entries.next_page_number}}">Next</a>
-        {% endif %}
-
+        <div class="pages">   
+            <p class="num-of-pages">Page {{ entries.number }} of {{ entries.paginator.num_pages }}.
+            <ul class="pagination justify-content-center">   
+                
+                {% if entries.has_previous %}
+                <li class="page-item"><a class="page-link" href="?page={{entries.previous_page_number}}">Previous </a></li>
+                {% endif %}
+            
+                {% if entries.has_next %}
+                <li class="page-item"><a class="page-link" href="?page={{entries.next_page_number}}"> Next </a></li>
+                {% endif %}
+            </ul>  
+        </div>
     </div>
 {% endblock %}
