--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <div class="welcome">
     <h1>welcome to my blog</h1>
     <p>have fun!</p>
-    <a href="{% url 'entries' %}"><button class="check">check out my posts</button></a>
+    <a href="{% url 'entries' %}"><button class="btn btn-outline-success active">check out my posts</button></a>
 </div>
     
 {% endblock %}
