--- a/assets/style.css
+++ b/assets/style.css
@@ -55,21 +55,6 @@ body {
   color: rgb(223, 223, 223);
 }
 
-.check {
-  margin-top: 20px;
-  text-transform: uppercase;
-  background-color: #83B53E;
-  color: #fff;
-  padding: 10px;
-  border-radius: 5px;
-  border: none;
-  cursor: pointer;
-  font-size: 15px;
-}
-.check a {
-  text-decoration: none;
-}
-
 .about {
   border-radius: 5px;
   font-family: "Inter";
@@ -130,4 +115,17 @@ body {
 }
 .return a:hover {
   color: #4a5055;
+}
+
+.login {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 70vh;
+}
+
+.login-field {
+  margin-top: 2rem;
+  width: 500px;
 }/*# sourceMappingURL=style.css.map */
