--- a/assets/style.scss
+++ b/assets/style.scss
@@ -103,8 +103,7 @@ body {
     margin: 20px 0;
     // border-bottom: 2px solid rgb(114, 30, 30);
     .title {
-        color: #4a5055;
-        
+        color: #4a5055; 
     }
     .date {
         margin-bottom: 0px;
@@ -124,4 +123,17 @@ body {
             color: #4a5055;
         }
     }
+}
+
+.login {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 70vh;
+}
+
+.login-field {
+    margin-top:2rem;
+    width: 500px;
 }
