--- a/templates/nav.html
+++ b/templates/nav.html
@@ -6,6 +6,11 @@
         <a href="{% url 'index' %}">index</a>
         <a href="{% url 'about' %}">about me</a>
         <a href="{% url 'entries' %}">entries</a>
+        {% if user.is_authenticated %}
+            <a href="{% url 'logout' %}">logout</a>
+        {% else %}
+            <a href="{% url 'login' %}">login</a>
+        {% endif %}
     </div>
     
 </div>
