--- a/entries/templates/entries/entry.html
+++ b/entries/templates/entries/entry.html
@@ -5,13 +5,16 @@
         <!-- <h1>List of entries</h1> -->
 
             <div class="entry">
-                <button type="button" onclick="history.back()" class="btn btn-outline-secondary btn-sm">Go back</button>
+                <button type="button" onclick="history.back()"  class="btn btn-outline-secondary btn-sm">Go back</button>
+                
                 <!-- <p class="return"><a href="{% url 'entries' %}"><i class="fa fa-arrow-left" aria-hidden="true"> back </i></a> </p> -->
                 <h2 class="title">{{ entries.title }}</h2>
                 <p>{{entries.body}}</p>
                 <p class="date">{{entries.date|date:"H:i, d.m.Y"}}</p>
-                
-                
+                {% if user.is_superuser %}
+                    <a class="btn btn-danger" role="button" href="destroy/{{ entry.id }}" >Delete</a>
+                    <a class="btn btn-warning" role="button" href="edit/{{ entry.id }}" >Edit</a>
+                {% endif %}
             </div>
 
 
