--- a/templates/nav.html
+++ b/templates/nav.html
@@ -7,10 +7,15 @@
         <a href="{% url 'about' %}">about me</a>
         <a href="{% url 'entries' %}">entries</a>
         {% if user.is_authenticated %}
+            {% if user.is_superuser %}
+                <a href="{% url 'new' %}">add new</a>
+            {% endif %}
             <a href="{% url 'logout' %}">logout</a>
         {% else %}
             <a href="{% url 'login' %}">login</a>
         {% endif %}
+
+        
     </div>
     
 </div>
