--- a/entries/templates/entries/entries_list.html
+++ b/entries/templates/entries/entries_list.html
@@ -12,8 +12,8 @@
                 <a href="entry/{{ entry.id }}/{{ entry.slug}}"><button class="btn btn-outline-secondary">READ MORE</button></a>
                 
                 {% if user.is_superuser %}
-                <a class="btn btn-danger" role="button" href="destroy/{{ entry.id }}" >Delete</a>
-                <a class="btn btn-warning" role="button" href="edit/{{ entry.id }}" >Edit</a>
+                    <a class="btn btn-danger" role="button" onclick="return confirm('Are you sure you want to delete this?')" href="destroy/{{ entry.id }}" >Delete</a>
+                    <a class="btn btn-warning" role="button" href="edit/{{ entry.id }}" >Edit</a>
                 {% endif %}
 
                 
